--- a/taxi.Rmd
+++ b/taxi.Rmd
@@ -234,26 +234,34 @@ speeds <- taxi %>% mutate(avg_speedCat = cut(avg_speed, c(0, 10, 20, 30, 40, 50)
   group_by(avg_speedCat) %>%
   summarize(mavg_speed = mean(avg_speed), mtip_pct = mean(tip_pct))
 mspeedCat <- lm(mtip_pct ~ mavg_speed, data = speeds)
-plot(mtip_pct ~ mavg_speed, data = speeds)
-abline(a = coef(mspeedCat)[1], b = coef(mspeedCat)[2])
-```
 
-```{r}
-taxi <- taxi %>% mutate(avg_speedCat = cut(avg_speed, c(0, 10, 20, 30, 40, 50)))
-plot(mtip_pct ~ mavg_speed, data = speeds)
-ggplot(subset(taxi, taxi$avg_speedCat == "(30,40]"), 
-  aes(x = avg_speed, y = tip_pct)) + 
+ggplot(speeds[1:5,], aes(x = mavg_speed, y = mtip_pct)) + 
   geom_point() +
+  geom_smooth(method = lm) + 
   labs(title = "Percentage Tipped by Average Speed", x = 
     "Average Speed (mph)", y = "Percentage Tipped")
 ```
 
+Tips in different speed categories
+
+```{r}
+taxi <- taxi %>% mutate(avg_speedCat = cut(avg_speed, c(0, 10, 20, 30, 40, 50)))
+speedCats <- c("(0,10]", "(10,20]", "(20,30]", "(30,40]", "(40,50]")
+for (i in speedCats) {
+  ggplot(subset(taxi, taxi$avg_speedCat == i), 
+    aes(x = avg_speed, y = tip_pct)) + 
+    geom_point() +
+    labs(title = "Percentage Tipped by Average Speed", x = 
+      "Average Speed (mph)", y = "Percentage Tipped")
+}
+```
 
 ## Plot of `trip_distance` by `avg_speed`
 
 ```{r}
 ggplot(taxi, aes(x = avg_speed, y = trip_distance)) + 
   geom_point() +
+  geom_smooth() +
   labs(title = "Trip Distance by Average Speed", x = 
     "Average Speed (mph)", y = "Percentage Tipped")
 ```
