--- a/taxi_outline.rmd
+++ b/taxi_outline.rmd
@@ -65,7 +65,8 @@ dataset: time (`dropoff_datetime` and `pickup_datetime`), location
 
 ## What factors predict how much (as a percentage of their total fare) a person tips?
 
-* Do people tip more if there are more passengers in the car (social pressure)? 
+* Do people tip more if there are more passengers in the car (perhaps due to 
+social pressure)? 
 
 ```{r}
 ggplot(taxi, aes(x = as.factor(passenger_count), y = tip_pct)) + 
